[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cabin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pivot.gd" type="Script" id=2]

[sub_resource type="Environment" id=1]

[node name="World" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="scene" parent="." instance=ExtResource( 1 )]

[node name="Pivot" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Sun" type="OmniLight" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15 )
omni_range = 50.0

[node name="Tween_Color" type="Tween" parent="Pivot"]

[node name="Tween_Rotation" type="Tween" parent="Pivot"]

[node name="Tween_Energy" type="Tween" parent="Pivot"]

[node name="Timer" type="Timer" parent="Pivot"]
wait_time = 60.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0, 0 )

[connection signal="tween_all_completed" from="Pivot/Tween_Color" to="Pivot" method="_on_Tween_Color_tween_all_completed"]
[connection signal="tween_all_completed" from="Pivot/Tween_Rotation" to="Pivot" method="_on_Tween_Rotation_tween_all_completed"]
[connection signal="tween_all_completed" from="Pivot/Tween_Energy" to="Pivot" method="_on_Tween_Energy_tween_all_completed"]
[connection signal="timeout" from="Pivot/Timer" to="Pivot" method="_on_Timer_timeout"]
